# dcj-sat

./: LICENSE  README.md  build.sh  configure.ac  main.py  new_main.py  run_sat.py  run_sat.sh  run_sat_new.sh
gredu-dcj/: configure.ac
gredu-dcj/src/: Makefile.am  distoptimizer.cc  distoptimizer.h  genome_base.cc  gredo.cc  presolver.cc  presolver.h
reading_simplified_params/: make_graph_from_params.py  test.py
sat_solver/: sat_solver_mcd.py
src/: Makefile.am  distoptimizer.cc  gredo.cc
src/simp_parameters/: readme.txt
test_files/gorilla_macaque/: gorilla.dcj  macaque.dcj
test_files/real_data/all/chicken_gorilla/: chicken.dcj  gorilla.dcj
test_files/real_data/all/chicken_human/: chicken.dcj  human.dcj
test_files/real_data/all/chicken_macaque/: chicken.dcj  macaque.dcj
test_files/real_data/all/chicken_molerat/: chicken.dcj  molerat.dcj
test_files/real_data/all/chicken_mouse/: chicken.dcj  mouse.dcj
test_files/real_data/all/chicken_zebrafish/: chicken.dcj  zebrafish.dcj
test_files/real_data/all/gorilla_human/: gorilla.dcj  human.dcj
test_files/real_data/all/gorilla_macaque/: gorilla.dcj  macaque.dcj
test_files/real_data/all/gorilla_molerat/: gorilla.dcj  molerat.dcj
test_files/real_data/all/gorilla_mouse/: gorilla.dcj  mouse.dcj
test_files/real_data/all/gorilla_zebrafish/: gorilla.dcj  zebrafish.dcj
test_files/sim_100_40_40/: sim_100_40_40_1.dcj  sim_100_40_40_2.dcj
test_files/sim_100_60_30/: sim_100_60_30_1.dcj  sim_100_60_30_2.dcj
utils/: genome_simulation_dcj.py  genome_simulation_reversal.py  new_simulation_script.py  viz.py
(+2224 files in other folders)
